# ChangeLog for dev-ruby/pivotal-tracker
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Sep 2014; Hans de Graaff <graaff@gentoo.org>
  pivotal-tracker-0.5.10.ebuild, pivotal-tracker-0.5.12.ebuild:
  Avoid unneeded test dependencies for now. Add ruby20.

  23 Sep 2014; Hans de Graaff <graaff@gentoo.org>
  -pivotal-tracker-0.3.0.ebuild, -pivotal-tracker-0.4.1.ebuild:
  Cleanup.

*pivotal-tracker-0.5.12 (13 Sep 2013)

  13 Sep 2013; Hans de Graaff <graaff@gentoo.org>
  +pivotal-tracker-0.5.12.ebuild:
  Version bump.

  04 Jul 2013; Hans de Graaff <graaff@gentoo.org>
  pivotal-tracker-0.5.10.ebuild:
  Add missing crack dependency.

  04 Jul 2013; Hans de Graaff <graaff@gentoo.org>
  pivotal-tracker-0.5.10.ebuild:
  Add missing nokogiri-happymapper dependency.

*pivotal-tracker-0.5.10 (04 Jul 2013)

  04 Jul 2013; Hans de Graaff <graaff@gentoo.org>
  +pivotal-tracker-0.5.10.ebuild:
  Version bump.

*pivotal-tracker-0.5.6 (05 Oct 2012)

  05 Oct 2012; Hans de Graaff <graaff@gentoo.org>
  +pivotal-tracker-0.5.6.ebuild:
  Version bump.

*pivotal-tracker-0.4.1 (19 Jul 2011)

  19 Jul 2011; Hans de Graaff <graaff@gentoo.org>
  +pivotal-tracker-0.4.1.ebuild:
  Version bump.

  25 May 2011; Hans de Graaff <graaff@gentoo.org>
  -pivotal-tracker-0.1.0.1.ebuild:
  Remove old version.

*pivotal-tracker-0.3.0 (08 Nov 2010)

  08 Nov 2010; Hans de Graaff <graaff@gentoo.org>
  +pivotal-tracker-0.3.0.ebuild:
  Version bump.

*pivotal-tracker-0.1.0.1 (23 Apr 2010)

  23 Apr 2010; Hans de Graaff <graaff@gentoo.org>
  +pivotal-tracker-0.1.0.1.ebuild, +metadata.xml:
  Initial import.
