@@ -1,3 +1,1 @@
-DIST pivotal-tracker-0.5.10.gem 25088 SHA256 86d2daf667d16f9638ecdf4e282a2c24fa5bc35be04a2f27e5edb1bfc3756a23 SHA512 d3c63b8d44c783c673baa8648ba4c8663bf9da8acf2d3ef107b0bbab3a1eb6f93d927f5b2ae891e90f2b2b8345cf3a40f62e7b100b918422d552c3b33d8b6409 WHIRLPOOL f31c9e7aa8696c488aa827bb0c4ec34551f2eaee5f8a8982bc58a4747c57f415a5a0f0bc583daf60913a63d78b69474ef6d433995a6f4e45bbf8348edd161d2d
 DIST pivotal-tracker-0.5.12.gem 26112 SHA256 ed8819731dc544a4ead6dceeeaf159cb219b6e380dda4f7b359945f5203c340a SHA512 fab699485b2d16de897f0271a2daa994b049d47915f5920a1e564dd17e80f1f3b4b44456b1f2e13d0451755f7126aad0e082f217b3a2113e04a36afc6ae788bf WHIRLPOOL 52447dd1626d10cab9ee637b87c7605b831bc39eb1a27a270bf43aec5ba8fa5bb915dcb027cf9e9a45cee6a4bab9717b7ed55f4260f7e8ebb2aa3d1326408a28
-DIST pivotal-tracker-0.5.6.gem 25088 SHA256 a70d831e990c79e5f638f53577fd0945b8f7eb39996a1b5db9b2863f8339ebc8 SHA512 8906897747f63731103230b9b2893b91bfc926ae22e570cf83fe42375640ba5e2e8f55d905f620fca9c4c21458dd147e3114f6e359b8c53c0bdb3047b430721a WHIRLPOOL 44b33e39bcaa95f0a6f98aea3d51218a98d9fe45047dddbe3385c3d541d4e9fa92ce31d638a88945904c1aa788e86716880776be53d70211a5fed808553a9ac3
