@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/pivotal-tracker
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  22 May 2015; Hans de Graaff <graaff@gentoo.org>
+  -pivotal-tracker-0.5.6.ebuild, -pivotal-tracker-0.5.10.ebuild:
+  Cleanup.
 
   23 Sep 2014; Hans de Graaff <graaff@gentoo.org>
   pivotal-tracker-0.5.10.ebuild, pivotal-tracker-0.5.12.ebuild:
